Create main visual elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Tic-Tac-Toe</h1>
+    </div>
+    <div class="body">
+        <h2 class="playerTurn"></h2>
+        <div class="grid">
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+        </div>
+    </div>
 </body>
 </html>
