Finish interface style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Tic-Tac-Toe</h1>
     </div>
     <div class="body">
-        <h2 class="playerTurn"></h2>
+        <h2 class="gameStatus">Dummy Text</h2>
         <div class="grid">
             <div class="square"></div>
             <div class="square"></div>
@@ -24,6 +24,7 @@
             <div class="square"></div>
             <div class="square"></div>
         </div>
+        <button class="restart">Restart</button>
     </div>
 </body>
 </html>
