Finalize game mechanics

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Tic-Tac-Toe</h1>
     </div>
     <div class="body">
-        <h2 class="gameStatus">Dummy Text</h2>
+        <h2 class="gameStatus">Player X's Turn</h2>
         <div class="grid">
             <div class="square" id="1"></div>
             <div class="square" id="2"></div>
